--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,9 @@ jobs:
   docker:
     runs-on: ubuntu-18.04
     steps:
-      -
-        name: checkout
+      - name: checkout
         uses: actions/checkout@v2
-      -
-        name: test
+      - name: test
         run: |
           set -x
           docker build -t academiaonline/phpinfo:test .
